# council

./: .env.example  .gitignore  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
src/council/: main.py
src/council/agents/: base.py  gpt.py
