[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "council"
version = "0.1.0"
authors = [{ name = "Your Name" }]
description = "AI agent council for decentralized asset management"
requires-python = ">=3.8"
dependencies = ["pydantic-ai[logfire]"]

[tool.hatch.build]
packages = ["src"]

[project.scripts]
council = "src.council.main:main"
